# world-novel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_REVIEW.md  DESIGN.md  Dockerfile  Makefile  NEO4J_VECTOR_FEASIBILITY.md  PERFORMANCE_ANALYSIS.md  QDRANT_REMOTE_SETUP.md  README.md  docker-compose.yml  output.md  pyproject.toml
docs/product/: 01-vision.md  02-architecture.md  03-user-journey.md  04-features.md  05-workspace.md  06-pricing.md  07-pages.md  08-roadmap.md  09-database-abstraction.md  10-cognition-architecture.md  11-memory-enhancement.md  12-memory-key-exchange.md  13-generic-cognition-kit.md  14-memory-and-political-architecture.md  README.md
docs/superpowers/plans/: 2026-03-28-ui-redesign.md
scripts/: backup.sh  deploy-docker.sh  deploy-remote.sh  dev.sh  migrate_vectors.py  smoke-test.sh  start-local.sh  start.sh  test-harness.sh  upgrade.sh
scripts/migrations/: 001_schema.sql  002_v6_word_count.sql  003_v9_beat_id.sql  004_v10_memory_heat.sql  005_v6_token_usage.sql  006_v7_invite_quota.sql  migrate.py
src/novel_creator/: __init__.py  __main__.py  config.py  llm.py  log.py
src/novel_creator/agents/: __init__.py  director.py  (+6 more)
tests/: test_api.py  test_config.py  test_core.py  test_e2e.py  test_graph.py  test_integration.py  test_layered_memory.py  test_memory.py  test_models.py  test_quota_system.py  test_reflection.py  test_stores.py
web/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: main.ts
website/: index.html
(+157 files in other folders)
