[project]
name = "novel-creator"
version = "0.1.0"
description = "Multi-agent novel generation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "aiosqlite>=0.20",
    "numpy>=1.26",
    "fastembed>=0.3,<0.8",
    "typer>=0.15",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
novel-creator = "novel_creator.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novel_creator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
